--- a/cours/L1/Initiation web/SAE/CSS/fabien_Piat.css
+++ b/cours/L1/Initiation web/SAE/CSS/fabien_Piat.css
@@ -18,14 +18,20 @@ h1{
     border:solid;
     border-color: #F7e7Ce;
 }
-table, td{
+table{
     border: solid;
     border-color: #F7e7Ce;;
     border-collapse: collapse;
     text-align: center;
     width: 50%;
+    border-spacing: 2px;
+    border:  3px;
 }
 
+td, th{
+    border: 1px;
+    border: solid;
+}
 
 a{
     text-decoration: none;
