--- a/cours/L2/Semestre 3/WEB/SAE/style.css
+++ b/cours/L2/Semestre 3/WEB/SAE/style.css
@@ -1,29 +1,43 @@
-body{
+#main{
 
     background-image: url(ressources/SIAM.jpg);
     background-repeat: no-repeat;
-
-    background-position: center;
+    background-position: top center;
     justify-content: center;
     display: flex;
     align-items: center;
-    background-color: #69DEBC;
+    background-color: #69de9e;
     margin-top: 25%;
     margin-bottom: 25%;
 }
 
-a{
+#plateau{
+    background-image: url(ressources/background.jpg);
+    background-position: top center;
+    background-repeat: no-repeat;
+    justify-content: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #69de11;
+    width: 100%;
+    height: 100%;
+}
+
+
+#boutton_play{
     background-color: #69DEBC;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
-    width: 10%;
+    width: 12%;
     display: flex;
     justify-content: center;
+    text-decoration: none;
 }
 
-a:hover {
+#boutton_play:hover {
     opacity: 0.7;
 
 }
