--- a/cours/L2/Semestre 3/WEB/SAE/style.css
+++ b/cours/L2/Semestre 3/WEB/SAE/style.css
@@ -9,19 +9,25 @@
     background-color: #69de9e;
     margin-top: 25%;
     margin-bottom: 25%;
+    height: auto;
+}
+
+body, html{
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 #plateau{
     background-image: url(ressources/background.jpg);
-    background-position: top center;
+    background-position: center center;
     background-repeat: no-repeat;
     justify-content: center;
     display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: #69de11;
     width: 100%;
     height: 100%;
+    
 }
 
 
@@ -41,3 +47,4 @@
     opacity: 0.7;
 
 }
+
