Remove unused files and add new exercises for TD 4 and HTML form

--- a/cours/L2/Semestre 3/WEB/SAE/style.css
+++ b/cours/L2/Semestre 3/WEB/SAE/style.css
@@ -47,4 +47,12 @@ body, html{
     opacity: 0.7;
 
 }
+#boutton_play {
+    transition: background-color 2s ease, opacity 2s ease;
+}
 
+
+#boutton_play:active {
+    background-color: #57c9a5;
+    opacity: 0.9;
+}
