--- a/cours/L2/Semestre 3/WEB/SAE/style.css
+++ b/cours/L2/Semestre 3/WEB/SAE/style.css
@@ -2,14 +2,13 @@
 
     background-image: url(ressources/SIAM.jpg);
     background-repeat: no-repeat;
-    background-position: top center;
+    background-position: center center;
     justify-content: center;
     display: flex;
     align-items: center;
     background-color: #69de9e;
-    margin-top: 25%;
-    margin-bottom: 25%;
-    height: auto;
+    height: 100%;
+    width: 100%;
 }
 
 body, html{
@@ -18,27 +17,44 @@ body, html{
     padding: 0;
 }
 
-#plateau{
+
+#game-board{
     background-image: url(ressources/background.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     justify-content: center;
     display: flex;
-    background-color: #69de11;
+    background-color: #69de9e;
     width: 100%;
-    height: 100%;
+    height: 80%;
     
 }
 
+#jeu{
+    background-color: #69de9e;
+}
+
+h1{
+    color: white;
+    font-size: 50px;
+    text-align: center;
+    margin-top: 10px; 
+    margin-bottom: 0;
+}
+
+#info-joueur{
+    color: white;
+    text-align: center;
+    font-size: 20px;
+}
 
 #boutton_play{
+    background-position: center center;
     background-color: #69DEBC;
     color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
+    padding: 14px 80px;
     border: none;
     width: 12%;
-    display: flex;
     justify-content: center;
     text-decoration: none;
 }
@@ -47,12 +63,24 @@ body, html{
     opacity: 0.7;
 
 }
-#boutton_play {
-    transition: background-color 4s ease, opacity 4s ease;
-}
-
 
 #boutton_play:active {
     background-color: #57c9a5;
     opacity: 0.9;
 }
+
+button {
+    padding: 20px 40px;
+    background-color: #008CBA;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    background-position:center;
+
+}
+
+button:hover {
+    background-color: #005f6b;
+}
+
